# golfPlus

./: CMakeLists.txt  README.md
driver/: CMakeLists.txt
driver/include/: ir_sensor.h
driver/src/: ir_sensor_gpiod.c
logic/: CMakeLists.txt
logic/src/: ir_event_main.c
ui/: backend.py  main.py  main.qml
